z-index fix

--- a/src/blocks/header/style.scss
+++ b/src/blocks/header/style.scss
@@ -5,7 +5,7 @@
     left: 5px;
     right: 5px;
     border-radius: 6px;
-    z-index: 1000;
+    z-index: 900;
     padding: 9px 0;
     margin: 0 auto;
     width: auto;
