--- a/src/blocks/sliders/style.scss
+++ b/src/blocks/sliders/style.scss
@@ -42,7 +42,7 @@
         height: 30px;
         background-color: $dark-bg;
         top: calc(100% - 30px);
-        z-index: 999;
+        z-index: 800;
         border: none;
         display: flex;
         align-items: center;
@@ -213,7 +213,7 @@
         width: 46px;
         height: 30px;
         border: 1px solid rgba($dark-bg, .6);
-        z-index: 999;
+        z-index: 800;
         display: flex;
         align-items: center;
         justify-content: center;
